syntax = "proto3";
package heartbeat;

service Heartbeat {
  // Runner sends a heartbeat to indicate it is alive
  rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message HeartbeatRequest {
  string runner_id = 1;
  string timestamp = 2;
  string runner_addr = 3;
}

message HeartbeatResponse {
  bool ok = 1;
  string message = 2;
}